<resources>
    <string name="app_name">Fia2</string>
    <string name="action_settings">Settings</string>
    <string name="inicio">inicio</string>
    <string name="deudores">deudores</string>
    <string name="ventas">ventas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="login">Inicio Sesion</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="email">Email</string>
    <string name="contrase_a">contraseña</string>
    <string name="registro">registrarse</string>
    <string name="registarse">Registarse</string>
    <string name="logout">salir</string>
    <string name="nombre">nombre</string>
    <string name="apellido">apellido</string>
    <string name="title_activity_agregar_deuda">AgregarDeuda</string>
</resources>
