<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <android.support.design.widget.TabLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/tab_layout"
            android:background="@color/colorPrimary"
            app:tabSelectedTextColor="@android:color/white"
            app:tabTextColor="@color/colorAccent">

            <android.support.design.widget.TabItem
                android:id="@+id/home"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/inicio"/>

            <android.support.design.widget.TabItem
                android:id="@+id/debs"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/deudores"/>

            <android.support.design.widget.TabItem
                android:id="@+id/sales"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/ventas"/>

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/action_bar"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp" />

</RelativeLayout>